--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,17 @@ attrs==19.2.0
 coverage==4.5.4
 Django==2.2.6
 djangorestframework==3.10.3
+entrypoints==0.3
+flake8==3.7.8
 importlib-metadata==0.23
+mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
 pkg-resources==0.0.0
 pluggy==0.13.0
 py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 pyparsing==2.4.2
 pytest==5.2.1
 pytest-cov==2.8.1
