--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,44 @@
+alabaster==0.7.12
 atomicwrites==1.3.0
 attrs==19.2.0
+Babel==2.7.0
+certifi==2019.9.11
+chardet==3.0.4
 coverage==4.5.4
 Django==2.2.6
 djangorestframework==3.10.3
+docutils==0.15.2
 entrypoints==0.3
 flake8==3.7.8
+idna==2.8
+imagesize==1.1.0
 importlib-metadata==0.23
+Jinja2==2.10.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
+pkg-resources==0.0.0
 pluggy==0.13.0
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
+Pygments==2.4.2
 pyparsing==2.4.2
 pytest==5.2.1
 pytest-cov==2.8.1
 pytz==2019.3
+requests==2.22.0
 six==1.12.0
+snowballstemmer==2.0.0
+Sphinx==2.2.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
 sqlparse==0.3.0
+urllib3==1.25.6
 wcwidth==0.1.7
 zipp==0.6.0
