--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2019.9.11
 chardet==3.0.4
 coverage==4.5.4
 Django==2.2.6
+django-mysql==3.2.0
 djangorestframework==3.10.3
 docutils==0.15.2
 entrypoints==0.3
@@ -18,7 +19,6 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
-pkg-resources==0.0.0
 pluggy==0.13.0
 py==1.8.0
 pycodestyle==2.5.0
@@ -27,6 +27,7 @@ Pygments==2.4.2
 pyparsing==2.4.2
 pytest==5.2.1
 pytest-cov==2.8.1
+pytest-django==3.5.1
 pytz==2019.3
 requests==2.22.0
 six==1.12.0
