--- a/iwsoj/runner/imgs/c/Dockerfile
+++ b/iwsoj/runner/imgs/c/Dockerfile
@@ -2,4 +2,8 @@ FROM gcc
 
 ARG fpath
 
-COPY $fpath /runner/target.c
+RUN echo fpath is $fpath
+COPY ./$fpath /runner/target.c
+COPY ./run.sh /runner/run.sh
+RUN chmod +x /runner/run.sh
+CMD /runner/run.sh
