--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage==4.5.4
 Django==2.2.6
 django-mysql==3.2.0
 djangorestframework==3.10.3
+docker==4.1.0
 docutils==0.15.2
 entrypoints==0.3
 flake8==3.7.8
@@ -19,6 +20,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
+pkg-resources==0.0.0
 pluggy==0.13.0
 py==1.8.0
 pycodestyle==2.5.0
@@ -28,7 +30,7 @@ pyparsing==2.4.2
 pytest==5.2.1
 pytest-cov==2.8.1
 pytest-django==3.5.1
-pytest-mock
+pytest-mock==1.11.1
 pytz==2019.3
 requests==2.22.0
 six==1.12.0
@@ -43,4 +45,5 @@ sphinxcontrib-serializinghtml==1.1.3
 sqlparse==0.3.0
 urllib3==1.25.6
 wcwidth==0.1.7
+websocket-client==0.56.0
 zipp==0.6.0
