Added support for C++ Added support for Go Added support for Java Added supported for Python3 Containers removed after code run Images removed after code run Added integration tests with dummy code snippets

--- a/iwsoj/runner/imgs/go/Dockerfile
+++ b/iwsoj/runner/imgs/go/Dockerfile
@@ -1,8 +1,8 @@
-FROM gcc
+FROM golang
 
 ARG fpath
 
-COPY $fpath /runner/target.c
+COPY $fpath /runner/target.go
 COPY ./run.sh /runner/run.sh
 RUN chmod +x /runner/run.sh
 CMD /runner/run.sh
