--- a/iwsoj/runner/imgs/cpp/Dockerfile
+++ b/iwsoj/runner/imgs/cpp/Dockerfile
@@ -2,7 +2,7 @@ FROM gcc
 
 ARG fpath
 
-COPY $fpath /runner/target.c
+COPY $fpath /runner/target.cpp
 COPY ./run.sh /runner/run.sh
 RUN chmod +x /runner/run.sh
 CMD /runner/run.sh
