--- a/iwsoj/runner/imgs/java/Dockerfile
+++ b/iwsoj/runner/imgs/java/Dockerfile
@@ -1,8 +1,8 @@
-FROM gcc
+FROM openjdk
 
 ARG fpath
 
-COPY $fpath /runner/target.c
+COPY $fpath /runner/target.java
 COPY ./run.sh /runner/run.sh
 RUN chmod +x /runner/run.sh
 CMD /runner/run.sh
