--- a/iwsoj/runner/imgs/c/Dockerfile
+++ b/iwsoj/runner/imgs/c/Dockerfile
@@ -4,5 +4,6 @@ ARG fpath
 
 COPY $fpath /runner/target.c
 COPY ./run.sh /runner/run.sh
+COPY ./input.txt /runner/input.txt
 RUN chmod +x /runner/run.sh
 CMD /runner/run.sh
