Implemented stdin with tests

--- a/iwsoj/runner/imgs/go/Dockerfile
+++ b/iwsoj/runner/imgs/go/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang
 
 ARG fpath
+ARG stdinfpath
 
+COPY $stdinfpath /runner/input.txt
 COPY $fpath /runner/target.go
 COPY ./run.sh /runner/run.sh
 RUN chmod +x /runner/run.sh
