--- a/iwsoj/runner/imgs/cpp/Dockerfile
+++ b/iwsoj/runner/imgs/cpp/Dockerfile
@@ -1,7 +1,9 @@
 FROM gcc
 
 ARG fpath
+ARG stdinfpath
 
+COPY $stdinfpath /runner/input.txt
 COPY $fpath /runner/target.cpp
 COPY ./run.sh /runner/run.sh
 RUN chmod +x /runner/run.sh
