--- a/iwsoj/runner/imgs/java/Dockerfile
+++ b/iwsoj/runner/imgs/java/Dockerfile
@@ -1,7 +1,9 @@
 FROM openjdk
 
 ARG fpath
+ARG stdinfpath
 
+COPY $stdinfpath /runner/input.txt
 COPY $fpath /runner/target.java
 COPY ./run.sh /runner/run.sh
 RUN chmod +x /runner/run.sh
