--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2019.9.11
 chardet==3.0.4
 coverage==4.5.4
 Django==2.2.6
+django-cors-headers==3.1.1
 django-mysql==3.2.0
 djangorestframework==3.10.3
 docker==4.1.0
