--- a/iwsoj/runner/imgs/cpp/Dockerfile
+++ b/iwsoj/runner/imgs/cpp/Dockerfile
@@ -1,10 +1,3 @@
 FROM gcc
 
-ARG fpath
-ARG stdinfpath
-
-COPY $stdinfpath /runner/input.txt
-COPY $fpath /runner/target.cpp
-COPY ./run.sh /runner/run.sh
-RUN chmod +x /runner/run.sh
-CMD /runner/run.sh
+CMD chmod +x /runner/run.sh; /runner/run.sh
