--- a/iwsoj/runner/imgs/py3/Dockerfile
+++ b/iwsoj/runner/imgs/py3/Dockerfile
@@ -1,11 +1,4 @@
 FROM python:3.7
 
-ARG fpath
-ARG stdinfpath
-
-COPY $stdinfpath /runner/input.txt
-COPY $fpath /runner/target.py
-COPY ./run.sh /runner/run.sh
-RUN chmod +x /runner/run.sh
-CMD /runner/run.sh
+CMD chmod +x /runner/run.sh; /runner/run.sh
 
